# rogerbr.github.io

./: 404.html  CNAME  LICENSE  README.md  index.html  sitemap.xml  style.css
godot-lessons/: index.html  sitemap.xml
godot-lessons/search/: search_index.json
godot-lessons/src/: README.md  gdscript_lexer.py  gdscript_style.py  mkdocs.yml  pyproject.toml  setup.py
godot-lessons/src/docs/: index.md
godot-lessons/src/docs/lessons/: animation.md  autoloads.md  demo.md  herobox.md  input.md  lighting.md  mouse_area3d.md  mouse_interactions.md  mouse_raycast.md  resources.md  scene_management.md
godot-lessons/src/docs/others/: gdscript_test.md
godot-lessons/src/docs/stylesheets/godot/: test.css
godot-lessons/src/lexer_gdscript/: setup.py
godot-lessons/src/lexer_gdscript/lexer_gdscript/: gdscript.py
godot-lessons/src/lexer_gdscript/lexer_gdscript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
godot-lessons/src/mkdocs_custom_lexer/: plugin.py
godot-lessons/src/mkdocs_custom_lexer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
godot-lessons/src/site/: 404.html  index.html  sitemap.xml
godot-lessons/src/site/lessons/animation/: index.html
godot-lessons/src/site/lessons/input/: index.html
godot-lessons/src/site/lessons/mouse_area3d/: index.html
godot-lessons/src/site/lessons/mouse_interactions/: index.html
godot-lessons/src/site/lessons/resources/: index.html
godot-lessons/src/site/lessons/scene_management/: index.html
godot-lessons/src/site/search/: search_index.json
search/: search_index.json
(+22 files in other folders)
